Add MVC model, connect mongooDB|mongoose

--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "webproject",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
+    "beautiful": "prettier --single-quote --trailing-comma all --tab-width 4 --write 'src/**/*.{js,json,scss}'",
+    "start": "nodemon --inspect src/index.js",
+    "sass": "sass --watch src/resources/scss/main.scss src/public/assets/css/main.css",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,12 +18,21 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
+    "express-handlebars": "^8.0.1",
     "express-session": "^1.18.1",
     "method-override": "^3.0.0",
+    "mongoose": "^8.8.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.3",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "sequelize": "^6.37.5"
+  },
+  "devDependencies": {
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
+    "morgan": "^1.10.0",
+    "node-sass": "^9.0.0",
+    "prettier": "^3.3.3"
   }
 }
