--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mysql2": "^3.11.3",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
+    "sass": "^1.80.6",
     "sequelize": "^6.37.5"
   },
   "devDependencies": {
