--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "src/index.js",
   "scripts": {
     "beautiful": "prettier --single-quote --trailing-comma all --tab-width 4 --write 'src/**/*.{js,json,scss}'",
-    "start": "nodemon --inspect src/index.js",
+    "start": "nodemon --inspect src/app.js",
     "sass": "sass --watch src/resources/scss/main.scss src/public/assets/css/main.css",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
