--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
-{
+{ 
   "name": "webproject",
   "version": "1.0.0",
-  "main": "src/index.js",
+  "main": "src/app.js",
   "scripts": {
     "beautiful": "prettier --single-quote --trailing-comma all --tab-width 4 --write 'src/**/*.{js,json,scss}'",
     "start": "nodemon --inspect src/app.js",
