--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{ 
+{
   "name": "webproject",
   "version": "1.0.0",
   "main": "src/app.js",
@@ -21,9 +21,11 @@
     "express-handlebars": "^8.0.1",
     "express-session": "^1.18.1",
     "method-override": "^3.0.0",
+    "moment": "^2.30.1",
     "mongoose": "^8.8.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.3",
+    "nodemailer": "^6.9.16",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "sass": "^1.80.6",
@@ -34,6 +36,7 @@
     "lint-staged": "^15.2.10",
     "morgan": "^1.10.0",
     "node-sass": "^9.0.0",
+    "nodemon": "^3.1.9",
     "prettier": "^3.3.3"
   }
 }
