--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mysql2": "^3.11.3",
     "nodemailer": "^6.9.16",
     "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "sass": "^1.80.6",
     "sequelize": "^6.37.5"
